--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -302,6 +302,11 @@ iframe.twitter-tweet,
   margin-bottom: 3rem;
 }
 
+body[data-bs-theme="dark"] .twitter-tweet .text-dark{
+  color: var(--bs-secondary-color) !important;
+  font-weight: bold;
+}
+
 body.page-template-template-submit-your-bot{
   blockquote{
     padding: 1em;
